Fixing the theme dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,9 @@
   margin: 0;
   box-sizing: border-box;
 }
-.html{
+html{
   font-size: 62.5%;
+  height: 100vh;
 }
 /*---------header------*/
 header{
